# chithi

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-cli.yml  build-frontend.yml  docker-build-backend.yml  docker-build-caddy.yml  docker-build-frontend-node.yml  docker-build-frontend-static.yml  docker-build-frontend.yml  publish-ghcr.yml
apps/landing-page/: next.config.ts  package-lock.json  package.json
apps/landing-page/app/: globals.css  layout.tsx  page.tsx
assets/: chithi-(dev).avif
docs/: pyproject.toml  zensical.toml
docs/docs/: index.md
src/backend/: Dockerfile  pyproject.toml
src/backend/alembic/: env.py  script.py.mako
src/backend/alembic/versions/: 0174c68460fd_add_size_information_on_files.py  06f5394139b5_update_configs.py  553f32c34ead_make_datetime_objects_timezone_aware.py  66ba42d0529f_create_users_table.py  6d1b8bb8ce78_create_users_table.py  8d12371fc44b_change_to_biginteger.py  b0f939de9dcb_.py  cb303129bc56_.py  dfb12aeef438_.py  f6bd9eb9dd41_change_to_download_count_biginteger.py
src/backend/app/: __main__.py  cli.py  db.py  deps.py  main.py  router.py  security.py  settings.py
src/backend/app/celery/: __init__.py
src/backend/app/cli/: add_user.py  change_password.py
src/backend/app/converter/: bytes.py
src/backend/app/decorators/: rate_limit.py
src/backend/app/guards/: rate_limit.py
src/backend/app/models/: __init__.py  config.py  files.py  onboarding.py  user.py
src/backend/app/parser/: log.py  time.py
src/backend/app/periodic_tasks/: __init__.py  periodically_clean_files.py  periodically_clean_multipart_files.py  periodically_clean_stalled_files.py
src/backend/app/routes/: config.py  download.py  information.py  login.py  onboarding.py  speedtest.py  test.py  upload.py  user.py
src/backend/app/routes/admin/: config.py  files.py  user.py
src/backend/app/schemas/: config.py  speedtest.py  user.py
src/backend/app/tasks/: __init__.py  clean_file.py  multipart_cleanup.py
src/backend/core/: settings.py  urls.py
src/backend/scripts/: start_backend.sh  start_celery.sh  start_celery_beat.sh
src/caddy/: Caddyfile  Dockerfile  go.mod  main.go
src/cli/: .gitignore  pyproject.toml
src/cli/app/: __main__.py  main.py
src/frontend/: .prettierrc  Dockerfile  Dockerfile.static  busybox.conf  lighttpd.conf  orval.config.cjs  package-lock.json  package.json  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
src/frontend/builds/: Dockerfile.node  Dockerfile.static
src/frontend/src/: app.html  hooks.server.ts
src/frontend/src/css/: fonts.scss  nprogress.scss  tailwind.css
src/frontend/src/lib/components/: QRCode.svelte
src/frontend/src/lib/components/ui/: admin-sidebar.svelte
src/frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-item.svelte
src/frontend/src/lib/components/ui/select/: select-value.svelte
src/frontend/src/lib/consts/: backend.ts  concurrency.ts
src/frontend/src/lib/database/: index.ts
src/frontend/src/lib/functions/: bytes.ts  compatibility.ts  compression.ts  download.ts  encryption.ts  libravatar.ts  markdown.ts  marked.ts  sanitize.ts  security.ts  streams.ts  string-conversion.ts  tar.ts  times.ts  urls.ts  zip.ts
src/frontend/src/lib/logos/: chrome.svelte  edge.svelte  firefox.svelte  github.svelte  safari.svelte
src/frontend/src/lib/markdown/: markdown.ts
src/frontend/src/lib/markdown/plugins/: email-obfuscate.ts
src/frontend/src/lib/queries/: auth.ts  config.ts  files.ts  onboarding.ts
src/frontend/src/lib/svgs/: complete.svelte
src/frontend/src/lib/workers/: archive.worker.ts  decrypt.worker.ts  encrypt.worker.ts  speedtest.worker.ts
src/frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  layout.css
src/frontend/src/routes/(login_required)/: +layout.svelte
src/frontend/src/routes/(login_required)/admin/: +page.svelte
src/frontend/src/routes/(navbar_and_footer)/: +layout.svelte  +page.svelte
src/frontend/src/routes/(navbar_and_footer)/(fancy_grid)/: +layout.svelte  +page.svelte  recent_upload.svelte
src/frontend/src/routes/(navbar_and_footer)/(login_required)/admin/: +layout.svelte  +page.svelte
src/frontend/src/routes/(needs_onboarding)/: +layout.svelte  +layout.ts
src/frontend/src/routes/(needs_onboarding)/(login_required)/: +layout.svelte  +layout.ts
src/frontend/src/routes/(needs_onboarding)/(login_required)/admin/: +layout.svelte  app-sidebar.svelte
src/frontend/src/routes/(needs_onboarding)/(navbar_and_footer)/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts  recent_upload.svelte
src/frontend/src/routes/(needs_onboarding)/(navbar_and_footer)/(fancy_grid)/: +page.svelte  +page.ts  recent_upload.svelte
src/frontend/src/routes/(needs_onboarding)/(navbar_and_footer)/(login_required)/: +layout.svelte
src/frontend/src/routes/(needs_onboarding)/(navbar_and_footer)/download/: +layout.ts
src/frontend/src/routes/(needs_onboarding)/(navbar_and_footer)/speedtest/: +page.svelte
src/frontend/src/routes/(needs_onboarding)/login/: +page.svelte
src/frontend/src/routes/(needs_onboarding)/logout/: +page.svelte
src/frontend/src/routes/(web_crypto)/: +layout.ts
src/frontend/src/routes/(web_crypto)/(navbar_and_footer)/: +layout.svelte  +page.svelte
src/frontend/src/routes/(web_crypto)/(navbar_and_footer)/(fancy_grid)/: +page.svelte  recent_upload.svelte
src/frontend/src/routes/(web_crypto)/(navbar_and_footer)/(grid)/: +layout.svelte  +page.svelte
src/frontend/src/routes/(web_crypto)/(navbar_and_footer)/(login_required)/: +layout.svelte
src/frontend/src/routes/(web_crypto)/login/: +page.svelte
src/frontend/src/routes/admin/: +layout.svelte
src/frontend/src/routes/login/: +page.svelte
src/frontend/src/routes/og/opengraph.png/: +server.ts  OpenGraph.svelte
src/frontend/src/routes/onboarding/: +page.svelte  1.svelte  2.svelte  types.ts
src/frontend/src/routes/qr/: +page.svelte
src/frontend/src/routes/speedtest/: +page.svelte
src/tui/: pyproject.toml
src/tui/src/: app.py
(+24 files in other folders)
