[project]
name = "chithi_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.127.0",
    "granian>=2.6.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "sqlalchemy[postgresql-asyncpg]>=2.0.45",
    "sqlmodel>=0.0.27",
    "typer>=0.20.1",
]

[dependency-groups]
dev = ["fastapi-cli>=0.0.16"]

[tool.setuptools]
packages = ["app"]

[tool.uv]
default-groups = ["dev"]
package = true

[project.scripts]
backend = "app.cli:main"
