[project]
name = "chithi_backend"
version = "0.1.0"
description = "The next generation end to end file sharing server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Fastapi
    "fastapi>=0.127.0",
    "python-multipart>=0.0.21",
    # ASGI server
    "granian>=2.6.0",
    # Password Hashinh
    "pwdlib[argon2]>=0.3.0",
    # Pydantic based settings manager
    "pydantic-settings>=2.12.0",
    # JWT
    "pyjwt>=2.10.1",
    # Database and ORM
    "sqlalchemy[postgresql-asyncpg]>=2.0.45",
    "sqlmodel>=0.0.27",
    # Migration Engine
    "alembic>=1.17.2",
    # Cli
    "typer>=0.20.1",
    # Rustfs Upload
    "aioboto3>=15.5.0",
]

[dependency-groups]
dev = ["fastapi-cli>=0.0.16", "types-aioboto3>=15.5.0"]

[tool.setuptools]
packages = ["app"]

[tool.uv]
default-groups = ["dev"]
package = true

[project.scripts]
backend = "app.__main__:main"
