[project]
name = "chithi_backend"
version = "0.1.0"
description = "The next generation end to end file sharing server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Fastapi
    "fastapi>=0.127.0",
    "python-multipart>=0.0.21",
    # ASGI server
    "uvicorn>=0.40.0",
    # Password Hashinh
    "pwdlib[argon2]>=0.3.0",
    # Pydantic based settings manager
    "pydantic-settings>=2.12.0",
    # JWT
    "pyjwt>=2.10.1",
    # Database and ORM
    "sqlalchemy[postgresql-asyncpg]>=2.0.45",
    "sqlmodel>=0.0.27",
    # Migration Engine
    "alembic>=1.17.2",
    # Cli
    "typer>=0.20.1",
    # Rustfs Upload
    "aioboto3>=15.5.0",
    # Task queue
    "celery[redis]>=5.6.1",
    "redis[hiredis]>=6.4.0",
    # Mandatory type
    "types-aiobotocore-s3>=2.25.2",
]

[dependency-groups]
dev = [
    "celery-types>=0.24.0",
    "fastapi-cli>=0.0.16",
    "ruff>=0.14.10",
    "types-aioboto3>=15.5.0",
    # Task runner
    "poethepoet>=0.39.0",
]
[tool.poe.tasks]
dev = "fastapi dev ./app/main.py"

[tool.setuptools]
packages = ["app"]

[tool.uv]
default-groups = "all"
package = true

[project.scripts]
backend = "app.__main__:main"

[tool.ruff.lint]
extend-select = ["I"]  # Enables isort rules

[tool.ruff.format]
skip-magic-trailing-comma = false  # Avoids conflict with isort.split-on-trailing-comma

[tool.ruff.lint.isort]
split-on-trailing-comma = true  # Keep this aligned with format.skip-magic-trailing-comma
combine-as-imports = true
