[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # CLI
    "typer>=0.21.0",
    "async-typer>=0.1.10",
    # Asnyc loop implementation
    "uvloop>=0.22.1;sys_platform=='linux'",
    # Http Client
    "httpx[http2]>=0.28.1",
    "py7zr>=1.1.0",
]


[dependency-groups]
build = ["nuitka>=2.8.9", "zstandard>=0.25.0"]
dev = ["poethepoet>=0.39.0"]

[tool.poe.tasks]
# Is not possible to build due to type hint error
nuitka = "nuitka --standalone --onefile --clang --lto=yes --python-flag=-m --python-flag=-OO --disable-bytecode-cache ./app"
nuitka-linux = "nuitka --standalone --onefile --clang --lto=yes --python-flag=-m --python-flag=-OO --linux-appimage --disable-bytecode-cache ./app"
nuitka-debug = "nuitka --standalone --onefile --clang --lto=yes --debug --python-flag=-m --python-flag=-OO --disable-bytecode-cache ./app"


[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true
default-groups = ['build', 'dev']


[project.scripts]
chithi = "app.__main__:main"
