[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Crypto helpers
    "cryptography>=46.0.3",
    # Main TUI application
    "textual>=7.0.0",
    # Http Client
    "httpx[http2]>=0.28.1",

]

[dependency-groups]
build = ["nuitka>=2.8.9", "pyinstaller>=6.17.0"]
dev = [
    "poethepoet>=0.39.0",
    "textual-dev>=1.8.0",
]

[tool.poe.tasks]
nuitka = "nuitka --onefile --follow-imports --lto=yes --standalone main.py"
